--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.2",
   "description": "Simple solution for retrieving values from deep within an object",
   "main": "object-descender.js",
+  "homepage": "https://github.com/SpaceAceMonkey/object-descender",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SpaceAceMonkey/object-descender.git"
+  },
   "dependencies": {
     "fs": "0.0.1-security",
     "js-yaml": "^3.12.0"
